--- a/style.css
+++ b/style.css
@@ -8,26 +8,33 @@
     padding: 0;
 }
 
-body{
-    background-color: #FCF6F5FF;
+html{
+    height: 100%;
 }
+
+body{
+    height: 100%;
+    background: url(./images/4.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 
 .main{
     display: grid;
     grid-template-columns: 1.2fr 1fr;
-    height: 100vh;
+    min-height: 100%;
 }
 
 .left{
     background-color: #89ABE3FF;
+    /* background-color: rgba(0, 0, 0, 0.6); */
+    background-color: #606060FF;
     clip-path: polygon(75% 0, 100% 38%, 56% 100%, 0 100%, 0 0);
 
-
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid red;
 }
 
 .left-content{
@@ -223,7 +230,7 @@ body{
     text-decoration: none;
     color: black;
     font-weight: 700;
-    font-size: 1rem;
+    font-size: 1.1rem;
     letter-spacing: 1px;
 }
 
@@ -243,14 +250,31 @@ body{
 }
 
 .right-content .social a{
+    font-size: 1rem;
+    font-weight: 500;
+    font-family: 'Open Sans', sans-serif;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-top: 1rem;
+    color: black;
 }
 
 .right-content .social a i{
+    font-size: 1.2rem;
     padding-right: 0.5rem;
+    color: #101820FF;
+    animation: instagram 2s infinite 1s ease-in-out alternate-reverse;
+    transform-origin: bottom 50% 0;
 }
 
+@keyframes instagram{
+    0%{
+        transform: translateY(0)
+    }
 
+    100%{
+        transform: translateY(-5px);
+    }
+
+}
 
