--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 
 html{
+    width: 100%;
     height: 100%;
 }
 
@@ -22,11 +23,13 @@ body{
 
 .main{
     display: grid;
-    grid-template-columns: 1.2fr 1fr;
-    min-height: 100%;
+    grid-template-columns: 55% 45% ;
+    grid-template-rows: 100vh;  
 }
 
 .left{
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     background-color: #89ABE3FF;
     /* background-color: rgba(0, 0, 0, 0.6); */
     background-color: #606060FF;
@@ -35,10 +38,12 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 1rem;
 }
 
 .left-content{
     margin: 0 8rem 8rem 5rem;
+    max-width: 700px;
 }
 
 .left-content h1 {
@@ -164,6 +169,8 @@ body{
 
 
 .right{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     margin-bottom: 3rem ;
     padding: 0 2.5rem;
     display: grid;
@@ -263,7 +270,7 @@ body{
     font-size: 1.2rem;
     padding-right: 0.5rem;
     color: #101820FF;
-    animation: instagram 2s infinite 1s ease-in-out alternate-reverse;
+    animation: instagram 1s infinite ease-in-out alternate-reverse;
     transform-origin: bottom 50% 0;
 }
 
@@ -278,3 +285,340 @@ body{
 
 }
 
+
+.main{
+    position: relative;
+}
+
+.footer,.footer-mobile{
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-size: 0.8rem;
+    font-weight: 500;
+    font-family: 'Open Sans', sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:1205px) {
+    html{
+        margin: 0;
+        padding: 0;
+    }
+    .main{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        grid-template-columns: 100%;
+        grid-template-rows: 40% 60%;
+    }
+
+    .left{
+        margin: 0;
+        padding: 0;
+        grid-column: 1 / 3;
+        grid-row: 1 /  2;
+    }
+    
+    .right{
+        margin: 0;
+        padding: 0;
+        grid-column: 1 / 3;
+        grid-row: 2 / 5;
+    }
+
+    .footer {
+        display: none;
+    }
+     
+}
+@media screen and (min-width:1205px){
+    .footer-mobile {
+        display: none;
+    }
+
+}
+
+
+
+@media screen and (max-width:415px) {
+    .left, .right{
+        margin: 0;
+        padding: 0;
+    }
+
+    .left{
+        clip-path: none;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+    .left-content{
+        width: 100%;
+        margin: 15rem 0;
+        padding: 0 0 0 1.2rem;
+    }
+
+    .left-content h1{
+        font-size: 3.5rem;
+    }
+
+    .left-content p{
+        width: 90%;
+        font-size: 0.8rem;
+    }
+
+
+    .logo{
+        justify-content: left;
+        margin-left: 1.2rem;
+    }
+
+    .right-content{
+        padding: 0 0 0 1.2rem;
+        width: 90%;
+    }
+    .right-content .about-us{
+        padding: 0;
+        margin: 0;
+        margin-bottom: 1.1rem;
+    }
+    .right-content .about-us p{
+        font-size: 0.8rem;
+    }
+    
+    .right-content .numbers,
+    .right-content .social{
+        padding: 0;
+        margin: 0;
+        margin-top: 1rem;
+    }
+    .right-content .numbers p,
+    .right-content .social p{
+        font-size: 0.8rem;
+    }
+    .right-content .numbers .number i,
+    .right-content .numbers .number a,
+    .right-content .social i,
+    .right-content .social a{
+        font-size: 0.8rem;
+    }
+    
+  
+}
+
+
+@media screen and (max-width:281px){
+    .left{
+        width: 100%;
+    }
+
+    .left-content h1{
+        font-size: 3rem;
+    }
+}
+
+
+@media screen and (min-width:450px) and (max-width:780px){
+
+    .left{
+        width: 100%;
+        clip-path: none;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+
+    .left-content{
+        margin: 5rem 0 5rem 1.3rem;
+        margin-top: 9rem;
+        width: 100%;
+        padding: 5rem 0 9rem 0rem;
+    }
+
+    .left-content h1{
+        width: 80%;
+        font-size: 5rem;
+    }
+
+    .left-content p{
+        width: 80%;
+        font-size: 0.9rem;
+    }
+
+    .logo{
+        justify-content: left;
+        margin-left: 3rem;
+    }
+
+    .right-content{
+        padding: 0 0 0 3rem;
+        width: 90%;
+    }
+    .right-content .about-us{
+        padding: 0;
+        margin: 0;
+    }
+    .right-content .about-us p{
+        font-size: 0.9rem;
+    }
+    
+    .right-content .numbers,
+    .right-content .social{
+        padding: 0;
+        margin: 0;
+        margin-top: 1rem;
+    }
+    .right-content .numbers p,
+    .right-content .social p{
+        font-size: 0.9rem;
+    }
+    .right-content .numbers .number i,
+    .right-content .numbers .number a,
+    .right-content .social i,
+    .right-content .social a{
+        font-size: 0.9rem;
+    }
+
+}
+
+
+
+
+@media screen and (min-width:1020px) and (max-height:610px){
+    .left{
+        width: 100%;
+        clip-path: none;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+
+    .left-content{
+        margin: 5rem 0 5rem 1.3rem;
+        margin-top: 9rem;
+        width: 100%;
+        padding: 5rem 0 9rem 0rem;
+    }
+
+    .left-content h1{
+        width: 80%;
+        font-size: 5rem;
+    }
+
+    .left-content p{
+        width: 80%;
+        font-size: 0.9rem;
+    }
+
+    .logo{
+        justify-content: left;
+        margin-left: 3rem;
+    }
+    .logo img{
+        width: 10%;
+    }
+
+    .right-content{
+        padding: 0 0 0 3rem;
+        width: 90%;
+    }
+    .right-content .about-us{
+        padding: 0;
+        margin: 0;
+    }
+    .right-content .about-us p{
+        font-size: 0.9rem;
+    }
+    
+    .right-content .numbers,
+    .right-content .social{
+        padding: 0;
+        margin: 0;
+        margin-top: 1rem;
+    }
+    .right-content .numbers p,
+    .right-content .social p{
+        font-size: 0.9rem;
+    }
+    .right-content .numbers .number i,
+    .right-content .numbers .number a,
+    .right-content .social i,
+    .right-content .social a{
+        font-size: 0.9rem;
+    }
+
+}
+
+
+
+@media screen and (min-width:1020px) and (min-height:1300px){
+    .left{
+        width: 100%;
+        clip-path: none;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+
+    .left-content{
+        margin: 5rem 0 5rem 1.3rem;
+        margin-top: 9rem;
+        width: 100%;
+        padding: 5rem 0 9rem 0rem;
+    }
+
+    .left-content h1{
+        width: 80%;
+        font-size: 5rem;
+    }
+
+    .left-content p{
+        width: 80%;
+        font-size: 1.1rem;
+    }
+
+    .logo{
+        justify-content: left;
+        margin-left: 3rem;
+    }
+    .logo img{
+        width: 10%;
+    }
+
+    .right-content{
+        padding: 0 0 0 3rem;
+        width: 90%;
+    }
+    .right-content .about-us{
+        padding: 0;
+        margin: 0;
+    }
+    .right-content .about-us p{
+        font-size: 1.1rem;
+    }
+    
+    .right-content .numbers,
+    .right-content .social{
+        padding: 0;
+        margin: 0;
+        margin-top: 1rem;
+    }
+    .right-content .numbers p,
+    .right-content .social p{
+        font-size: 1.1rem;
+    }
+    .right-content .numbers .number i,
+    .right-content .numbers .number a,
+    .right-content .social i,
+    .right-content .social a{
+        font-size: 1.1rem;
+    }
+
+
+}
